// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/pages/Home renders Home correctly & changes Title of page 2: Data Imports 1`] = `
<button
  class="ant-btn css-dev-only-do-not-override-k7429z ant-btn-link admin-link btn-links"
  type="button"
>
  <span>
    Data Imports
  </span>
</button>
`;

exports[`containers/pages/Home renders Home correctly & changes Title of page 2: Location Management 1`] = `
<button
  class="ant-btn css-dev-only-do-not-override-k7429z ant-btn-link admin-link btn-links"
  type="button"
>
  <span>
    Location Management
  </span>
</button>
`;

exports[`containers/pages/Home renders Home correctly & changes Title of page 2: Organization Management 1`] = `
<button
  class="ant-btn css-dev-only-do-not-override-k7429z ant-btn-link admin-link btn-links"
  type="button"
>
  <span>
    Organization Management
  </span>
</button>
`;

exports[`containers/pages/Home renders Home correctly & changes Title of page 2: Questionnaire Management 1`] = `
<button
  class="ant-btn css-dev-only-do-not-override-k7429z ant-btn-link admin-link btn-links"
  type="button"
>
  <span>
    Questionnaire Management
  </span>
</button>
`;

exports[`containers/pages/Home renders Home correctly & changes Title of page 2: User Management 1`] = `
<button
  class="ant-btn css-dev-only-do-not-override-k7429z ant-btn-link admin-link btn-links"
  type="button"
>
  <span>
    User Management
  </span>
</button>
`;
